--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,10 @@ jobs:
         run: |
           npm ci || npm install
 
+      - name: Build package
+        run: |
+          npm run build
+
       - name: Verify package version
         run: |
           echo "Package version:"
